--- a/3/3.html
+++ b/3/3.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 3</title>
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    <div>
-        <header style="border: 1px solid black; border-radius: 5px; margin-left: 5%; margin-right: 5%; height: 15%;">Homework 3</header>
-    </div>
+
+        <header class="head_style">Homework 3</header>
+        <div>
+            <div class="sidebar_style">
+                <a href="task.html"><p>Первое задание</p></a>
+                <a href="2.html"><p>Второе задание</p></a>
+            </div>
+            <div class="centralblock_style">
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                <ol>
+                    <li>Шикарно сделано</li>
+                    <li>С душой</li>
+                    <li>От души</li>
+                </ol>
+            </div>
+        </div>
+        
+        <footer class="footer_style">Made by Ben (c)</footer>
+
 </body>
 </html>
